workksk on the php mail

--- a/.env
+++ b/.env
@@ -3,3 +3,13 @@ DB_HOST=localhost
 DB_NAME = portfolio
 DB_USER=root
 DB_PASS=
+
+
+# mail configuration 
+MAIL_HOST="sandbox.smtp.mailtrap.io"
+MAIL_PORT=587
+MAIL_USERNAME="5f335e72b68fe4"
+MAIL_PASSWORD="41a125cd0b8081"
+MAIL_FROM="pasanglama66666@gmail.com"
+MAIL_REPLY_TO="pasanglama66666@gmail.com"
+
