--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_NAME = portfolio
 DB_USER=root
 DB_PASS=
 
-
+PROJECT_MODE = "Development"
 # mail configuration 
 MAIL_HOST="sandbox.smtp.mailtrap.io"
 MAIL_PORT=587
